# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-02-17
# --------------------------------------------------------------------
# + cut release v4.0
# + backgrounds41.txt with pmt u238-rn222 and pb210
# + all joined rootfiles for buil41


# 2017-02-16
# --------------------------------------------------------------------
# ~ tweaked cluster script for build41
# ~ changed to join41.py and build41
# + build everything - all/single/multi hit into one rootfile


# 2017-02-15
# --------------------------------------------------------------------
# ~ get runNum from data['info']
# ~ packed all the calibration root text stuff into the calib functions
# + add new calib41() new calib points from Pushpa
# ~ revamped the way the data calibration is handled for lo/hi energy
# + add new calib40() with old calib points and new format
# ~ change low energy hist to be 0-200 keV


# 2017-02-14
# --------------------------------------------------------------------
# ~ cleaned up some code in funcs40.py
# + added edep and lsveto cuts to MC selection


# 2017-02-13
# --------------------------------------------------------------------
# + added lsveto cuts to the data selection
# + added ncluster cuts to data selection - not much difference from
#   the edep cuts
# ~ revamped the sigle/multi hit TCut making in funcs40.py
# + fix for lsveto MC rootfile selection - my code was also selecting
#   lsvetoair rootfiles - this is now fixed - no big impact on anything
# ~ checked merged data files against normal files and output was the same
# + added paths in funcs40.py to use the Vxx-xx-xx_MERGED rootfiles for data


# 2017-02-09
# --------------------------------------------------------------------